kanc/src/tests/sample_code/should_fail/multi_file/bind/use_priv/src/foo/mod.ph
mod bar;
use bar.Foo;
